<resources>
    <string name="app_name">criptomonedas_Tania</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">Lista Criptomonedas</string>
    <string name="nombre">Nombre Criptomoneda</string>
    <string name="simbolo">Simbolo</string>
    <string name="detalle">Simbolo</string>
    <string name="informacion">Información</string>
    <string name="volver">Volver</string>
    <string name="status">- Status : </string>
    <string name="price">- Precio : </string>
    <string name="price_date">- Fecha Precio :</string>
    <string name="price_timestamp">- Tiempo Precio : </string>
    <string name="rank">- Rango : </string>


    price_timestamp
</resources>