<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Encabezado-->

    <LinearLayout
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/item_image_detail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            tools:srcCompat="@drawable/ic_moneda" />

        <TextView
            android:id="@+id/name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nombre"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/symbol_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/simbolo"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/informacion">

        </Button>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_below="@+id/encabezado"
        android:layout_above="@id/btn_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/status"
                android:textSize="15dp"
                android:textStyle="bold" >

            </TextView>

            <TextView
                android:id="@+id/status_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/status"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:textStyle="bold" >

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:textSize="15dp"
                android:textStyle="bold" >

            </TextView>

            <TextView
                android:id="@+id/price_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp">

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price_date"
                android:textSize="15dp"
                android:textStyle="bold" >

            </TextView>

            <TextView
                android:id="@+id/price_date_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price_date"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price_timestamp"
                android:textSize="15dp"
                android:textStyle="bold" >

            </TextView>

            <TextView
                android:id="@+id/price_timestamp_date_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price_timestamp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rank"
                android:textSize="15dp"
                android:textStyle="bold" >

            </TextView>

            <TextView
                android:id="@+id/rank_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rank"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp">

            </TextView>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginBottom="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAtras"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/volver"
            android:textColor="@color/white">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</RelativeLayout>

